--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,20 +1,27 @@
 useDynLib(SpecsVerification)
 export(BrierScoreDecomposition)
+export(ClimEns)
 export(DressCrps)
 export(DressCrpsDiff)
+export(DressCrpss)
 export(DressIgnDiff)
+export(DressIgnSs)
 export(DressEnsemble)
 export(DressIgn)
 export(FairBrier)
 export(FairBrierDiff)
+export(FairBrierSs)
 export(FairCrps)
 export(FairCrpsDiff)
+export(FairCrpss)
 export(FairRps)
 export(FairRpsDiff)
+export(FairRpss)
 export(FitAkdParameters)
 export(GaussCrps)
 export(GaussCrpsDecomposition)
 export(GaussCrpsDiff)
+export(GaussCrpss)
 export(GetDensity)
 export(PlotDressedEns)
 export(PlotRankhist)
