--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 useDynLib(SpecsVerification)
 export(BrierScoreDecomposition)
 export(ClimEns)
+export(Detrend)
 export(DressCrps)
 export(DressCrpsDiff)
 export(DressCrpss)
@@ -8,6 +9,15 @@ export(DressIgnDiff)
 export(DressIgnSs)
 export(DressEnsemble)
 export(DressIgn)
+export(EnsBrier)
+export(EnsBrierDiff)
+export(EnsBrierSs)
+export(EnsCrps)
+export(EnsCrpsDiff)
+export(EnsCrpss)
+export(EnsRps)
+export(EnsRpsDiff)
+export(EnsRpss)
 export(FairBrier)
 export(FairBrierDiff)
 export(FairBrierSs)
@@ -23,6 +33,7 @@ export(GaussCrpsDecomposition)
 export(GaussCrpsDiff)
 export(GaussCrpss)
 export(GetDensity)
+export(GenerateToyData)
 export(PlotDressedEns)
 export(PlotRankhist)
 export(Rankhist)
